--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
   "name": "arquitecturabase",
   "version": "1.0.0",
-  "description": "Arquitectura base del proyecto procesos 2025-26",
+  "description": "Arquitectura base del proyecto de la asignatura de procesos",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --env-file .env index.js",
-    "testW": "node_modules\\.bin\\jasmine-node servidor",
-    "test": "jest"
+    "test": "jasmine servidor/modeloSpec.js",
+    "dev": "node --env-file .env index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alexgc04/ArquitecturaBase.git"
   },
-  "author": "",
+  "author": "Alex GC",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alexgc04/ArquitecturaBase/issues"
   },
   "homepage": "https://github.com/alexgc04/ArquitecturaBase#readme",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "bcryptjs": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cookie-session": "^2.1.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "jasmine": "^5.12.0",
+    "jquery": "^3.7.1",
     "mongodb": "^4.4.0",
     "nodemailer": "^7.0.10",
-    "passport": "^0.5.3",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-one-tap": "^1.0.1",
     "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "jasmine-node": "^1.16.0"
   }
 }
