--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/alexgc04/ArquitecturaBase#readme",
   "dependencies": {
+    "@google-cloud/secret-manager": "^6.1.1",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cookie-session": "^2.1.1",
@@ -27,11 +28,17 @@
     "express-session": "^1.18.2",
     "jasmine": "^5.12.0",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^4.4.0",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-one-tap": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.2"
   }
 }
